fix: use Arena.allocateFrom instead of removed allocateUtf8String
Arena.allocateUtf8String(String) was a preview-era helper that
went away when the FFM API was finalized (JEP 454, JDK 22).
The replacement is Arena.allocateFrom(String), which also
encodes as UTF-8 with a trailing NUL terminator.

Also refresh the Javadoc: FFM no longer needs --enable-preview,
only --enable-native-access=ALL-UNNAMED.